// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html render bbcode string render @user 1`] = `
[
  <a
    className="l"
    href="/user/1"
    style={{}}
  >
    @sai
  </a>,
  <a
    className="l"
    href="/user/a_little"
    style={{}}
  >
    @a_little
  </a>,
]
`;

exports[`html render bbcode string render align 1`] = `
[
  <p
    style={
      {
        "textAlign": "right",
      }
    }
  >
    右
  </p>,
  <p
    style={
      {
        "textAlign": "center",
      }
    }
  >
    中
  </p>,
  <p
    style={
      {
        "textAlign": "left",
      }
    }
  >
    左
  </p>,
]
`;

exports[`html render bbcode string render code 1`] = `
[
  <pre
    style={{}}
  >
    <React.Fragment>
      <React.Fragment>
        <React.Fragment />
        <br />
        ss[b]加粗
      </React.Fragment>
      换行了[/b](bgm38) [/fafa [code]
    </React.Fragment>
  </pre>,
]
`;

exports[`html render bbcode string render color 1`] = `
[
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      我是
    </React.Fragment>
    
  </React.Fragment>,
  <span
    style={
      {
        "color": "red",
      }
    }
  >
    彩
  </span>,
  <span
    style={
      {
        "color": "green",
      }
    }
  >
    色
  </span>,
  <span
    style={
      {
        "color": "blue",
      }
    }
  >
    的
  </span>,
  <span
    style={
      {
        "color": "orange",
      }
    }
  >
    哟
  </span>,
  "。",
]
`;

exports[`html render bbcode string render color size 1`] = `
[
  <span
    style={
      {
        "color": "red",
      }
    }
  >
    <span
      style={
        {
          "fontSize": "18px",
          "lineHeight": "18px",
        }
      }
    >
      一般
      <strong
        style={{}}
      >
        粗
      </strong>
      <React.Fragment>
        <React.Fragment>
          <React.Fragment />
          <br />
          
        </React.Fragment>
           
      </React.Fragment>
      <span
        style={
          {
            "textDecoration": "line-through",
          }
        }
      >
        删除
      </span>
    </span>
  </span>,
]
`;

exports[`html render bbcode string render img 1`] = `
[
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      存放于其他网络服务器的图片：
    </React.Fragment>
    
  </React.Fragment>,
  <img
    className="code"
    src="http://chii.in/img/ico/bgm88-31.gif"
    style={{}}
  />,
]
`;

exports[`html render bbcode string render mask 1`] = `
[
  "我是",
  <span
    style={
      {
        "backgroundColor": "#555",
        "border": "1px solid #555",
        "color": "#555",
      }
    }
  >
    马赛克文字
  </span>,
]
`;

exports[`html render bbcode string render quote 1`] = `
[
  <div
    className="quote"
    style={{}}
  >
    <q
      style={{}}
    >
      ss
      <strong
        style={{}}
      >
        加粗
      </strong>
    </q>
  </div>,
]
`;

exports[`html render bbcode string render size 1`] = `
[
  <span
    style={
      {
        "fontSize": "10px",
        "lineHeight": "10px",
      }
    }
  >
    不同
  </span>,
  <span
    style={
      {
        "fontSize": "14px",
        "lineHeight": "14px",
      }
    }
  >
    大小的
  </span>,
  <span
    style={
      {
        "fontSize": "18px",
        "lineHeight": "18px",
      }
    }
  >
    文字
  </span>,
  "效果也可实现。",
]
`;

exports[`html render bbcode string render sticker 1`] = `
[
  <img
    alt="(bgm38)"
    smileid="54"
    src="https://lain.bgm.tv/img/smiles/tv/15.gif"
    style={{}}
  />,
  <img
    alt="(bgm23)"
    smileid="39"
    src="https://lain.bgm.tv/img/smiles/bgm/23.gif"
    style={{}}
  />,
  <img
    alt="(=///=)"
    smileid="13"
    src="https://lain.bgm.tv/img/smiles/13.gif"
    style={{}}
  />,
]
`;

exports[`html render bbcode string render url 1`] = `
[
  "Bangumi 番组计划: ",
  <a
    className="l"
    href="http://chii.in/"
    style={{}}
  >
    http://chii.in/
  </a>,
]
`;

exports[`html render bbcode string render url 2`] = `
[
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      带文字说明的网站链接：
    </React.Fragment>
    
  </React.Fragment>,
  <a
    className="l"
    href="http://chii.in"
    style={{}}
  >
    Bangumi 番组计划
  </a>,
]
`;

exports[`html render bbcode string should render br 1`] = `
[
  <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <React.Fragment>
          <React.Fragment>
            <React.Fragment />
            <br />
            
          </React.Fragment>
          <br />
              又名：CUP人生茶话会
        </React.Fragment>
        <br />
        
      </React.Fragment>
      <br />
          1.上班的时候想要回家的。
    </React.Fragment>
        2.学校课上打瞌睡的。
  </React.Fragment>,
  <img
    alt="(bgm38)"
    smileid="54"
    src="https://lain.bgm.tv/img/smiles/tv/15.gif"
    style={{}}
  />,
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      
    </React.Fragment>
        2.学校课上打瞌睡的。
  </React.Fragment>,
  <img
    alt="(bgm11)"
    smileid="27"
    src="https://lain.bgm.tv/img/smiles/bgm/11.gif"
    style={{}}
  />,
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      
    </React.Fragment>
        2.学校课上打瞌睡的。
  </React.Fragment>,
  <img
    alt="(bgm12)"
    smileid="28"
    src="https://lain.bgm.tv/img/smiles/bgm/12.png"
    style={{}}
  />,
  <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <React.Fragment>
          <React.Fragment />
          <br />
          
        </React.Fragment>
        <br />
        
      </React.Fragment>
      <br />
      
    </React.Fragment>
        
  </React.Fragment>,
]
`;

exports[`html render bbcode string should render sticker 1`] = `
[
  <img
    alt="(bgm01)"
    smileid="17"
    src="https://lain.bgm.tv/img/smiles/bgm/01.png"
    style={{}}
  />,
]
`;

exports[`html render bbcode string should render sticker 2`] = `
[
  <img
    alt="(bgm38)"
    smileid="54"
    src="https://lain.bgm.tv/img/smiles/tv/15.gif"
    style={{}}
  />,
]
`;

exports[`html render bbcode string should render sticker 3`] = `
[
  <img
    alt="(bgm11)"
    smileid="27"
    src="https://lain.bgm.tv/img/smiles/bgm/11.gif"
    style={{}}
  />,
]
`;

exports[`react render vnode render boolean props node 1`] = `
<input
  disabled={true}
  style={{}}
  type="text"
/>
`;

exports[`react render vnode render link 1`] = `
<a
  className="l test"
  href="http://chii.in/"
  rel="nofollow external noopener noreferrer"
  style={{}}
  target="_blank"
/>
`;

exports[`react render vnode render mask 1`] = `
<span
  className="l"
  style={
    {
      "backgroundColor": "#555",
      "border": "1px solid #555",
      "color": "#555",
    }
  }
>
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      文字
    </React.Fragment>
    换行
  </React.Fragment>
</span>
`;

exports[`react render vnode render multi style 1`] = `
<span
  className="l"
  style={
    {
      "fontSize": "18px",
      "lineHeight": "18px",
    }
  }
>
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      文字
    </React.Fragment>
    换行了
  </React.Fragment>
</span>
`;

exports[`react render vnode render nest 1`] = `
<span
  style={
    {
      "fontSize": "18pt",
    }
  }
>
  <a
    className="l"
    href="http://chii.in/"
    style={{}}
  />
</span>
`;

exports[`react render vnode render nest 2`] = `
<span
  style={
    {
      "color": "red",
    }
  }
>
  <span
    style={
      {
        "fontSize": "18pt",
      }
    }
  >
    <a
      className="l"
      href="http://chii.in/"
      style={{}}
    />
  </span>
</span>
`;

exports[`react render vnode render pre children 1`] = `
<pre
  style={{}}
>
  <React.Fragment>
    <React.Fragment>
      <React.Fragment />
      <br />
      文字
    </React.Fragment>
    换行
  </React.Fragment>
</pre>
`;

exports[`react render vnode render sticker node 1`] = `
<img
  alt="(bgm38)"
  smileid="38"
  sticker-id="38"
  style={{}}
/>
`;
